<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_page_clean"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/parrel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.5">
        <ImageView
            android:id="@+id/img1"
            android:src="@drawable/mentor_me"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="60dp"
            android:layout_alignParentBottom="true">
        </ImageView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_layout"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_square_login">

        <TextView
            android:id="@+id/login_text"
            android:text="Login"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/email_text"
            android:text="Email"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_text" />

        <EditText
            android:id="@+id/email_box"
            android:hint="Enter Email"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:autofillHints="emailAddress"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/white_rounded_rectangle"
            android:layout_below="@id/email_text"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/password_text"
            android:text="Password"
            android:textSize="15dp"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_box" />

        <EditText
            android:id="@+id/password_box"
            android:hint="Enter Password"
            android:password="true"
            android:autofillHints="password"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:paddingLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/white_rounded_rectangle"
            android:layout_below="@id/password_text"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/forgot_password"
            android:clickable="true"
            android:text="Forgot Your Password?"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_box"
            android:layout_alignEnd="@id/password_box"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/login_button"
            android:text="Login"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="#50c1c9"
            android:background="@drawable/white_rounded_rectangle"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_below="@id/forgot_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/dontaccount"
                android:text="Dont have an account?"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/signup"
                android:clickable="true"
                android:text="@string/signup"
                android:textStyle="bold"
                android:textColor="#368389"
                android:textSize="13sp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>