<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".drop_review"
    android:background="#ddf7f6"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_square_review">
        <Button
            android:background="@drawable/back_arrow"
            android:id="@+id/back_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="70dp"/>

        <TextView
            android:id="@+id/greeting_text"
            android:text="Hi, I'm\nJohn Cooper"
            android:lineSpacingExtra="15dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/back_button"
            android:layout_below="@id/back_button"
            android:layout_marginTop="10dp"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/john_circle2"
            android:layout_alignTop="@id/greeting_text"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"/>

        <ImageView
            android:id="@+id/seperator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:src="#ddf7f6"
            android:layout_below="@id/greeting_text"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/review_text"
            android:text="Drop a review"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/back_button"
            android:layout_below="@id/seperator"
            android:layout_marginTop="15dp"
            />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/smily_face"
            android:layout_below="@id/seperator"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/review_text"
            android:layout_marginStart="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <EditText
            android:id="@+id/review_para"
            android:layout_width="350dp"
            android:layout_height="140dp"
            android:background="@drawable/review_textbox"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:text="Type your experience..."
            android:textColor="#949494"
            android:textSize="15sp"
            android:paddingBottom="60dp"
            android:paddingStart="25dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/review_para"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:layout_marginHorizontal="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ratingstar_unfilled"/>
            <Button
                android:layout_marginHorizontal="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ratingstar_unfilled"/>
            <Button
                android:layout_marginHorizontal="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ratingstar_unfilled"/>
            <Button
                android:layout_marginHorizontal="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ratingstar_unfilled"/>
            <Button
                android:layout_marginHorizontal="7dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ratingstar_unfilled"/>
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:text="Submit Feedback"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:background="@drawable/green_rounded_rectangle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

    </RelativeLayout>
</LinearLayout>