<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_page"
    android:background="#ddf7f6">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:orientation="horizontal"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/back_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:background="@drawable/back_arrow"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:text="My Profile"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#156f77"/>

            <ImageButton
                android:id="@+id/bt_settings"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="185dp"
                android:background="@drawable/settings_dots"
                android:scaleY="0.45"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.2">

            <ImageView
                android:id="@+id/background_img"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/ali_backdrop"
                android:scaleType="centerCrop"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ali_profilepic"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="70dp"
                android:layout_marginStart="40dp"
                android:src="@drawable/ali_circle"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_bgpic_bt"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="100dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:src="@drawable/edit_icon"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_pfpic_bt"
                android:clickable="true"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@id/ali_profilepic"
                android:layout_alignEnd="@id/ali_profilepic"
                android:layout_marginBottom="5dp"
                android:src="@drawable/edit_icon"/>

            <TextView
                android:id="@+id/username_text"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@id/ali_profilepic"
                android:layout_alignEnd="@id/ali_profilepic"
                android:layout_below="@id/ali_profilepic"
                android:text="Ali"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#156f77"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_below="@id/username_text"
                android:text="Islamabad"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="#918b8b"/>

            <Button
                android:id="@+id/sessions_button"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/gold_rounded_box"
                android:text="Booked Sessions"
                android:textSize="11sp"
                android:textColor="#156f77"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="Favorite Mentors"
                    android:textColor="#156f77"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_favorite_mentors"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollHorizontally="true">


                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="My Reviews"
                    android:textColor="#156f77"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycle_reviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/taskbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:background="#156f77"
        android:gravity="center">

        <Button
            android:id="@+id/bthome"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/home_taskbar"
            android:scaleY="0.7"
            android:scaleX="0.65"/>

        <Button
            android:id="@+id/btsearch"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/search_taskbar"
            android:scaleY="0.7"
            android:scaleX="0.65"/>

        <Button
            android:id="@+id/btchat"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/chat_taskbar"
            android:scaleY="0.7"
            android:scaleX="0.65"/>

        <Button
            android:id="@+id/btprofile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/profile_taskbar"
            android:scaleY="0.7"
            android:scaleX="0.65"/>

    </LinearLayout>
    <Button
        android:id="@+id/btaddcontent"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/plus_sign2"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"/>

</RelativeLayout>