...
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/bt_drop_rev"
                android:layout_width="160dp"
                android:layout_height="50dp"
                android:background="@drawable/drop_review_button"
                android:layout_marginHorizontal="20dp"/>

            <Button
...
